# tensorflow-protos-rs

./: .gitignore  Cargo.toml  README.md  build.rs
project_generator/: Cargo.toml
project_generator/src/: main.rs
src/: lib.rs  prost_gen.rs  protos.rs
src/prost_gen/: stream_executor_dnn.rs  tensorflow.rs  tensorflow_boosted_trees.rs  tensorflow_data_experimental.rs  tensorflow_eager.rs  tensorflow_error.rs  tensorflow_profiler.rs  tensorflow_profiler_op_profile.rs  tensorflow_tensorrt.rs  tensorflow_tf2xla.rs  tensorflow_tfprof.rs  tensorflow_tfprof_pprof.rs  tensorflow_tpu.rs  third_party_tensorflow_core_debug.rs  third_party_tensorflow_tools_api.rs  xla.rs  xla_gpu.rs  xrt.rs
src/protobuf_gen/: allocation_description.rs  api_def.rs  control_flow.rs  critical_section.rs  debug.rs  debug_service.rs  device_attributes.rs  dnn.rs  dynamic_padding.rs  event.rs  function.rs  gpu_autotuning.rs  hlo.rs  host_compute_metadata.rs  kernel_def.rs  log_memory.rs  memmapped_file_system.rs  named_tensor.rs  op_performance_data.rs  op_profile.rs  optimization_parameters.rs  queue_runner.rs  remote_fused_graph_execute_info.rs  rewriter_config.rs  saved_model.rs  saved_tensor_slice.rs  snapshot.rs  step_stats.rs  struct_pb.rs  tensorflow_server.rs  tf2xla.rs  tfprof_options.rs  tfprof_output.rs  trace_events.rs  trackable_object_graph.rs  transport_options.rs  trt_engine_instance.rs  worker.rs  worker_service.rs  xla.rs
src/protos/: api_objects.rs  autotuning.rs  backend_configs.rs  boosted_trees.rs  cluster.rs  compilation_result.rs  config.rs  conv_autotuning.rs  cost_graph.rs  debugger_event_metadata.rs  device_properties.rs  eager_service.rs  error_codes.rs  graph.rs  graph_debug_info.rs  graph_transfer_info.rs  hlo_profile_printer_data.rs  master.rs  master_service.rs  meta_graph.rs  node_def.rs  profile.rs  profiler_analysis.rs  profiler_service.rs  reader_base.rs  replay_log.rs  saved_object_graph.rs  saver.rs  summary.rs  tensor_bundle.rs  tensor_description.rs  tensor_slice.rs  tfprof_log.rs  topology.rs  tpu_embedding_configuration.rs  tpu_embedding_output_layout.rs  variable.rs  verifier_config.rs  versions.rs  xla_activity.rs  (+3 more)
