[package]
name = "tensorflow-protos-rs"
version = "0.1.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
edition = "2018"

[dependencies]
protobuf = "=2.17.0"

[features]
op_performance_data = ["tensor_shape","tensor","device_properties","types","attr_value",]
versions = []
tensor_shape = []
eager_service = ["types","tensor_shape","tensor","device_attributes","function","attr_value","versions","tensorflow_server",]
device_attributes = []
api_objects = []
remote_fused_graph_execute_info = ["graph","types","tensor_shape",]
event = ["summary",]
tfprof_log = ["attr_value","step_stats",]
xla = ["hlo","xla_data",]
xla_service = []
tensor_bundle = ["types","tensor_slice","versions","tensor_shape",]
dynamic_padding = []
node_def = ["attr_value",]
tpu_embedding_output_layout = []
replay_log = ["master",]
profiler_analysis = ["profiler_service",]
optimization_parameters = []
gpu_autotuning = ["autotuning","xla_data","hlo",]
variable = []
tensor_slice = []
graph_debug_info = []
tpu_embedding_configuration = ["optimization_parameters","tpu_embedding_output_layout",]
profile = []
control_flow = []
function = ["op_def","node_def","attr_value",]
api_def = ["attr_value",]
trt_engine_instance = ["tensor_shape",]
op_def = ["attr_value","types",]
resource_handle = ["types","tensor_shape",]
error_codes = []
device_properties = []
hlo_profile_printer_data = []
tfprof_options = []
attr_value = ["tensor","types","tensor_shape",]
log_memory = ["tensor_description",]
critical_section = []
profiler_service = ["op_profile","graph","config",]
master = ["device_attributes","graph","config","error_codes","tensor","named_tensor",]
debug = []
summary = ["tensor",]
debug_service = ["tfprof_log","tensor",]
tensorflow_server = ["cluster","config",]
boosted_trees = []
autotuning = []
conv_autotuning = ["dnn",]
saved_tensor_slice = ["versions","tensor_shape","types","tensor","tensor_slice",]
types = []
reader_base = []
saver = []
tf2xla = ["tensor_shape","types",]
xla_data = []
tfprof_output = ["types","tensor_shape",]
cost_graph = ["types","tensor_shape",]
struct_pb = ["tensor_shape","types",]
saved_object_graph = ["tensor_shape","struct_pb","variable","trackable_object_graph","versions","types",]
debugger_event_metadata = []
backend_configs = ["xla_data",]
memmapped_file_system = []
trackable_object_graph = []
saved_model = ["meta_graph",]
master_service = []
dnn = []
verifier_config = []
allocation_description = []
topology = []
rewriter_config = ["verifier_config","attr_value",]
hlo = ["xla_data",]
graph = ["node_def","versions","function",]
named_tensor = ["tensor",]
graph_transfer_info = ["types",]
xrt = ["host_compute_metadata","xla_data","xla","hlo",]
config = ["rewriter_config","graph","debug","cluster","step_stats","cost_graph",]
kernel_def = ["attr_value",]
xla_activity = ["config",]
snapshot = ["tensor",]
compilation_result = ["hlo","error_codes",]
queue_runner = ["error_codes",]
cluster = []
tensor = ["tensor_shape","resource_handle","types",]
op_profile = []
meta_graph = ["struct_pb","saver","graph","tensor_shape","saved_object_graph","op_def","types",]
tensor_description = ["allocation_description","tensor_shape","types",]
transport_options = []
host_compute_metadata = ["tensor_shape","types",]
step_stats = ["tensor_description","allocation_description",]
worker = ["types","tensor","tensor_shape","step_stats","config","debug","graph","named_tensor","tensorflow_server","cost_graph","device_attributes","error_codes",]
worker_service = []
trace_events = []
