[package]
name = "tensorflow-protos-rs"
version = "0.1.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
edition = "2018"
repository = "https://github.com/xd009642/tensorflow-proto-rs"
categories = ["science"]
description = "Protobuf codegen crate for tensorflow"
readme = "README.md"
license = "Apache-2.0"
exclude = ["project_generator", "tensorflow"]

[dependencies]
protobuf = "=2.17.0"

[features]
saved_object_graph = ["tensor_shape","struct_pb","types","variable","versions","trackable_object_graph",]
resource_handle = ["tensor_shape","types",]
backend_configs = ["xla_data",]
gpu_autotuning = ["hlo","xla_data","autotuning",]
op_performance_data = ["tensor_shape","attr_value","tensor","device_properties","types",]
replay_log = ["master",]
worker = ["step_stats","types","debug","cost_graph","config","tensor_shape","tensorflow_server","graph","named_tensor","error_codes","device_attributes","tensor",]
device_attributes = []
tfprof_options = []
profile = []
snapshot = ["tensor",]
variable = []
event = ["summary",]
control_flow = []
tf2xla = ["tensor_shape","types",]
error_codes = []
critical_section = []
hlo = ["xla_data",]
tensor_bundle = ["types","versions","tensor_shape","tensor_slice",]
tensor = ["types","tensor_shape","resource_handle",]
trackable_object_graph = []
api_objects = []
node_def = ["attr_value",]
xla_data = []
tpu_embedding_output_layout = []
log_memory = ["tensor_description",]
xla = ["hlo","xla_data",]
xrt = ["xla_data","xla","hlo","host_compute_metadata",]
tfprof_log = ["step_stats","attr_value",]
queue_runner = ["error_codes",]
tensorflow_server = ["config","cluster",]
boosted_trees = []
tpu_embedding_configuration = ["optimization_parameters","tpu_embedding_output_layout",]
compilation_result = ["error_codes","hlo",]
summary = ["tensor",]
saved_tensor_slice = ["types","tensor_shape","versions","tensor_slice","tensor",]
topology = []
saver = []
autotuning = []
graph = ["versions","node_def","function",]
trt_engine_instance = ["tensor_shape",]
verifier_config = []
eager_service = ["versions","types","tensorflow_server","tensor_shape","function","attr_value","device_attributes","tensor",]
cost_graph = ["tensor_shape","types",]
master_service = []
dnn = []
trace_events = []
attr_value = ["tensor_shape","tensor","types",]
api_def = ["attr_value",]
kernel_def = ["attr_value",]
allocation_description = []
memmapped_file_system = []
xla_activity = ["config",]
tensor_shape = []
reader_base = []
graph_transfer_info = ["types",]
transport_options = []
master = ["device_attributes","graph","config","error_codes","tensor","named_tensor",]
debug_service = ["tensor","tfprof_log",]
named_tensor = ["tensor",]
debug = []
profiler_service = ["graph","config","op_profile",]
graph_debug_info = []
tfprof_output = ["tensor_shape","types",]
cluster = []
remote_fused_graph_execute_info = ["graph","tensor_shape","types",]
saved_model = ["meta_graph",]
versions = []
conv_autotuning = ["dnn",]
profiler_analysis = ["profiler_service",]
dynamic_padding = []
tensor_slice = []
debugger_event_metadata = []
op_profile = []
worker_service = []
config = ["step_stats","cost_graph","graph","debug","cluster","rewriter_config",]
rewriter_config = ["attr_value","verifier_config",]
function = ["attr_value","node_def","op_def",]
hlo_profile_printer_data = []
xla_service = []
optimization_parameters = []
types = []
meta_graph = ["struct_pb","graph","op_def","saver","saved_object_graph","types","tensor_shape",]
tensor_description = ["tensor_shape","types","allocation_description",]
struct_pb = ["types","tensor_shape",]
step_stats = ["allocation_description","tensor_description",]
device_properties = []
host_compute_metadata = ["tensor_shape","types",]
op_def = ["types","attr_value",]
