[package]
name = "tensorflow-protos-rs"
version = "0.1.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
edition = "2018"

[dependencies]
prost = {version ="0.6", optional = true}
protobuf = {version ="=2.17.0", optional = true}

[features]
allocation_description = ["protobuf",]
api_def = ["attr_value","protobuf",]
api_objects = ["protobuf",]
attr_value = ["protobuf","tensor","tensor_shape","types",]
autotuning = ["protobuf",]
backend_configs = ["protobuf","xla_data",]
boosted_trees = ["protobuf",]
cluster = ["protobuf",]
compilation_result = ["error_codes","hlo","protobuf",]
config = ["cluster","cost_graph","debug","graph","protobuf","rewriter_config","step_stats",]
control_flow = ["protobuf",]
conv_autotuning = ["dnn","protobuf",]
cost_graph = ["protobuf","tensor_shape","types",]
critical_section = ["protobuf",]
debug = ["protobuf",]
debug_service = ["protobuf","tensor","tfprof_log",]
debugger_event_metadata = ["protobuf",]
device_attributes = ["protobuf",]
device_properties = ["protobuf",]
dnn = ["protobuf",]
dynamic_padding = ["protobuf",]
eager_service = ["attr_value","device_attributes","function","protobuf","tensor","tensor_shape","tensorflow_server","types","versions",]
error_codes = ["protobuf",]
event = ["protobuf","summary",]
function = ["attr_value","node_def","op_def","protobuf",]
google_protobuf = ["prost",]
gpu_autotuning = ["autotuning","hlo","protobuf","xla_data",]
graph = ["function","node_def","protobuf","versions",]
graph_debug_info = ["protobuf",]
graph_transfer_info = ["protobuf","types",]
hlo = ["protobuf","xla_data",]
hlo_profile_printer_data = ["protobuf",]
host_compute_metadata = ["protobuf","tensor_shape","types",]
kernel_def = ["attr_value","protobuf",]
log_memory = ["protobuf","tensor_description",]
master = ["config","device_attributes","error_codes","graph","named_tensor","protobuf","tensor",]
master_service = ["protobuf",]
memmapped_file_system = ["protobuf",]
meta_graph = ["graph","op_def","protobuf","saved_object_graph","saver","struct_pb","tensor_shape","types",]
named_tensor = ["protobuf","tensor",]
node_def = ["attr_value","protobuf",]
op_def = ["attr_value","protobuf","types",]
op_performance_data = ["attr_value","device_properties","protobuf","tensor","tensor_shape","types",]
op_profile = ["protobuf",]
optimization_parameters = ["protobuf",]
profile = ["protobuf",]
profiler_analysis = ["profiler_service","protobuf",]
profiler_service = ["config","graph","op_profile","protobuf",]
queue_runner = ["error_codes","protobuf",]
reader_base = ["protobuf",]
remote_fused_graph_execute_info = ["graph","protobuf","tensor_shape","types",]
replay_log = ["master","protobuf",]
resource_handle = ["protobuf","tensor_shape","types",]
rewriter_config = ["attr_value","protobuf","verifier_config",]
saved_model = ["meta_graph","protobuf",]
saved_object_graph = ["protobuf","struct_pb","tensor_shape","trackable_object_graph","types","variable","versions",]
saved_tensor_slice = ["protobuf","tensor","tensor_shape","tensor_slice","types","versions",]
saver = ["protobuf",]
snapshot = ["protobuf","tensor",]
step_stats = ["allocation_description","protobuf","tensor_description",]
stream_executor_dnn = ["prost",]
struct_pb = ["protobuf","tensor_shape","types",]
summary = ["protobuf","tensor",]
tensor = ["protobuf","resource_handle","tensor_shape","types",]
tensor_bundle = ["protobuf","tensor_shape","tensor_slice","types","versions",]
tensor_description = ["allocation_description","protobuf","tensor_shape","types",]
tensor_shape = ["protobuf",]
tensor_slice = ["protobuf",]
tensorflow = ["prost",]
tensorflow_boosted_trees = ["prost",]
tensorflow_data_experimental = ["prost",]
tensorflow_eager = ["prost",]
tensorflow_error = ["prost",]
tensorflow_grpc = ["prost",]
tensorflow_profiler = ["prost",]
tensorflow_profiler_op_profile = ["prost",]
tensorflow_server = ["cluster","config","protobuf",]
tensorflow_tensorrt = ["prost",]
tensorflow_tf2xla = ["prost",]
tensorflow_tfprof = ["prost",]
tensorflow_tfprof_pprof = ["prost",]
tensorflow_tpu = ["prost",]
tf2xla = ["protobuf","tensor_shape","types",]
tfprof_log = ["attr_value","protobuf","step_stats",]
tfprof_options = ["protobuf",]
tfprof_output = ["protobuf","tensor_shape","types",]
third_party_tensorflow_core_debug = ["prost",]
third_party_tensorflow_tools_api = ["prost",]
topology = ["protobuf",]
tpu_embedding_configuration = ["optimization_parameters","protobuf","tpu_embedding_output_layout",]
tpu_embedding_output_layout = ["protobuf",]
trace_events = ["protobuf",]
trackable_object_graph = ["protobuf",]
transport_options = ["protobuf",]
trt_engine_instance = ["protobuf","tensor_shape",]
types = ["protobuf",]
variable = ["protobuf",]
verifier_config = ["protobuf",]
versions = ["protobuf",]
worker = ["config","cost_graph","debug","device_attributes","error_codes","graph","named_tensor","protobuf","step_stats","tensor","tensor_shape","tensorflow_server","types",]
worker_service = ["protobuf",]
xla = ["hlo","xla_data",]
xla_activity = ["config","protobuf",]
xla_data = ["protobuf",]
xla_gpu = ["prost",]
xla_service = ["protobuf",]
xrt = ["hlo","host_compute_metadata","xla","xla_data",]
